--- a/chart/Dockerfile
+++ b/chart/Dockerfile
@@ -1,2 +1,2 @@
 FROM python:3.10.10-alpine as backend_image
-RUN pip install flask gunicorn flask-cors
+RUN pip install gunicorn dash==2.17.0 pandas plotly sqlalchemy
