--- a/chart/compose.yaml
+++ b/chart/compose.yaml
@@ -1,10 +1,4 @@
 services:
-  front:
-    image: nginx
-    volumes:
-      - ./index.html:/usr/share/nginx/html/index.html
-    ports:
-      - "80:80"
   back:
     image: backend_image
     build:
@@ -13,9 +7,9 @@ services:
     container_name: backend
     volumes:
       - ./financial_data.db:/app/financial_data.db
-      - ./backend.py:/app/backend.py
+      - ./app.py:/app/app.py
     environment:
       PYTHONPATH: "/app"
     ports:
-      - "5000:5000"
-    command: ['gunicorn', '-w', '4', '-b', '0.0.0.0:5000', 'backend:app']
+      - "80:5000"
+    command: ['gunicorn', '-w', '4', '-b', '0.0.0.0:5000', 'app:server']
