--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,5 @@ requests==2.20.1
 aiohttp==3.6.2
 websocket_client==0.57.0
 cryptography
-mplfinance
-pandas
-matplotlib
-mpld3
-plotly
-flask
-dash==2.17.0
 sqlalchemy
+PySide6
