--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,16 @@
-APScheduler==3.6.3
-requests==2.20.1
-aiohttp==3.6.2
-websocket_client==0.57.0
-pandas
-cryptography
-sqlalchemy
-PySide6
+APScheduler
+requests
+aiohttp
+websocket_client
+pandas~=2.2.3
+cryptography~=44.0.2
+sqlalchemy~=2.0.38
+PySide6~=6.8.2.1
+plotly~=6.0.0
+dash~=2.17.0
+numpy~=2.2.3
+matplotlib~=3.10.1
+Flask~=3.0.3
+websocket-client~=0.57.0
+setuptools~=68.2.0
+torch
