--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,13 @@ APScheduler
 requests
 aiohttp
 websocket_client
-pandas~=2.2.3
+pandas
 cryptography~=44.0.2
 sqlalchemy~=2.0.38
 PySide6~=6.8.2.1
 plotly~=6.0.0
 dash~=2.17.0
-numpy~=2.2.3
+numpy
 matplotlib~=3.10.1
 Flask~=3.0.3
 websocket-client~=0.57.0
